Add action endpoint. This may change in the future
