# api/swagger.json
@@ -22,6 +22,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Account"
+                ],
                 "summary": "User login",
                 "parameters": [
                     {
@@ -50,14 +53,69 @@
                 }
             }
         },
+        "/services/action/{serviceid}/{actioncommand}": {
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Apply a service specific action to a service instance",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service"
+                ],
+                "summary": "Apply a service specific action to a service instance",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id of service",
+                        "name": "serviceid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "action command",
+                        "name": "actioncommand",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.HTTPErrorDto"
+                        }
+                    }
+                }
+            }
+        },
         "/services/create/{servicetype}": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Create an instance of a service from yaml",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Service"
                 ],
                 "summary": "Create service instance from yaml",
                 "parameters": [
@@ -93,12 +151,20 @@
         },
         "/services/info": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get an overview over all service instances",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Service"
                 ],
                 "summary": "Get an overview over all service instances",
                 "responses": {
@@ -119,12 +185,20 @@
         },
         "/services/info/{serviceid}": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get the yaml file for an specific service instance. Parameter serviceid has to be supplied.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Service"
                 ],
                 "summary": "Get the yaml file for an instance",
                 "parameters": [
@@ -154,12 +228,20 @@
         },
         "/services/update/{serviceid}": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Update an instance of a service from yaml",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Service"
                 ],
                 "summary": "Update service instance from yaml",
                 "parameters": [
@@ -195,12 +277,20 @@
         },
         "/services/{serviceid}": {
             "delete": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Delete an instance of a service",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Service"
                 ],
                 "summary": "Delete a service instance",
                 "parameters": [
@@ -227,12 +317,20 @@
         },
         "/servicestore/info": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Lists all possible deployable services",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Servicestore"
                 ],
                 "summary": "Lists all possible deployable services",
                 "responses": {
@@ -253,12 +351,20 @@
         },
         "/servicestore/yaml/{servicetype}": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Get the default yaml file for a service-template",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Servicestore"
                 ],
                 "summary": "Get the default yaml for a service-template",
                 "parameters": [
@@ -327,9 +433,43 @@
                 }
             }
         },
+        "dtos.ServiceInstanceActionDto": {
+            "type": "object",
+            "properties": {
+                "command": {
+                    "type": "string",
+                    "example": "cmd_expose"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Expose service"
+                }
+            }
+        },
+        "dtos.ServiceInstanceActionGroupDto": {
+            "type": "object",
+            "properties": {
+                "actions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.ServiceInstanceActionDto"
+                    }
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Security"
+                }
+            }
+        },
         "dtos.ServiceInstanceDetailsDto": {
             "type": "object",
             "properties": {
+                "action_groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.ServiceInstanceActionGroupDto"
+                    }
+                },
                 "id": {
                     "type": "string",
                     "example": "936DA01F-9ABD-4D9D-80C7-02AF85C822A8"
